# doccmd-pre-commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml  dependabot-merge.yml  lint.yml  release.yml
