[project]
name = "doccmd-pre-commit"
version = "0.0.0"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "doccmd==2024.9.21",
]

optional-dependencies.dev = [
    "actionlint-py==1.7.2.16",
    "doc8==1.1.2",
    "pre-commit==3.8",
    "pyproject-fmt==2.2.4",
    # We add shellcheck-py not only for shell scripts and shell code blocks,
    # but also because having it installed means that ``actionlint-py`` will
    # use it to lint shell commands in GitHub workflow files.
    "shellcheck-py==0.10.0.1",
]

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
