[project]
name = "doccmd-pre-commit"
version = "0.0.0"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "doccmd==2024.10.18",
]
optional-dependencies.dev = [
    "actionlint-py==1.7.3.17",
    "doc8==1.1.2",
    "docformatter==1.7.5",
    "pre-commit==4.0.1",
    "pyproject-fmt==2.4.3",
    # We add shellcheck-py not only for shell scripts and shell code blocks,
    # but also because having it installed means that ``actionlint-py`` will
    # use it to lint shell commands in GitHub workflow files.
    "shellcheck-py==0.10.0.1",
    "shfmt-py==3.7.0.1",
    "yamlfix==1.17.0",
]

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
max_supported_python = "3.13"

[tool.yamlfix]
section_whitelines = 1
whitelines = 1

[tool.doc8]

max_line_length = 2000
