[project]
name = "doccmd-pre-commit"
version = "0.0.0"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "doccmd==2026.2.15",
]
optional-dependencies.dev = [
    "actionlint-py==1.7.11.24",
    "doc8==2.0.0",
    "prek==0.3.3",
    "pydocstringformatter==0.7.5",
    "pyproject-fmt==2.16.1",
    # We add shellcheck-py not only for shell scripts and shell code blocks,
    # but also because having it installed means that ``actionlint-py`` will
    # use it to lint shell commands in GitHub workflow files.
    "shellcheck-py==0.11.0.1",
    "shfmt-py==3.12.0.2",
    "sphinx-lint==1.0.2",
    "yamlfix==1.19.1",
    "zizmor==1.22.0",
]

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
max_supported_python = "3.14"

[tool.coverage]
report.show_missing = true

[tool.pyrefly]
errors.non-exhaustive-match = "error"

[tool.yamlfix]
section_whitelines = 1
whitelines = 1

[tool.pydocstringformatter]
write = true
split-summary-body = false
max-line-length = 79
linewrap-full-docstring = true

[tool.doc8]
max_line_length = 2000
